WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155912
[OS X] Layout sometimes flakily assumes overlay scrollbars when clicky-scroll-wheel-mouse is attached and system preference detects scrollbar mode
https://bugs.webkit.org/show_bug.cgi?id=155912
Summary
[OS X] Layout sometimes flakily assumes overlay scrollbars when clicky-scrol...
Myles C. Maxfield
Reported
2016-03-25 17:45:03 PDT
[OS X] Layout sometimes flakily assumes overlay scrollbars when clicky-scroll-wheel-mouse is attached and system preference detects scrollbar mode
Attachments
Patch
(3.92 KB, patch)
2016-03-25 17:55 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-03-25 17:55:07 PDT
Created
attachment 274962
[details]
Patch
Myles C. Maxfield
Comment 2
2016-03-25 17:55:15 PDT
***
Bug 155867
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 3
2016-03-26 10:26:17 PDT
Comment on
attachment 274962
[details]
Patch Maybe we should just have some global object that listens for the notifications, to avoid all these timing issues.
Myles C. Maxfield
Comment 4
2016-03-26 10:47:07 PDT
(In reply to
comment #3
)
> Comment on
attachment 274962
[details]
> Patch > > Maybe we should just have some global object that listens for the > notifications, to avoid all these timing issues.
We do (now)! That's what the WebScrollbarPrefsObserver is.
WebKit Commit Bot
Comment 5
2016-03-26 11:37:04 PDT
Comment on
attachment 274962
[details]
Patch Clearing flags on attachment: 274962 Committed
r198717
: <
http://trac.webkit.org/changeset/198717
>
WebKit Commit Bot
Comment 6
2016-03-26 11:37:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug